@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-26-2005 patrickh    gadget::MouseEvent objects on Windows now have correct
+                        key press state information.
+                        Submitted by: Juan Hernando
+
 [1.0.1 released - 8.29.2005]===================================================
 Aug-29-2005 patrickh    NEW VERSION: 1.0.1
 Aug-17-2005 patrickh    Recognize mouse scroll wheel events and treat them as
